mobel design aligned the header articles correctly

--- a/css/style.css
+++ b/css/style.css
@@ -33,6 +33,8 @@ ul {
 }
 .box{
   width: 100%;
+  margin-left: 10%;
+  margin-right: 10%;
 }
 .header{
   display: flex;
@@ -64,35 +66,29 @@ ul {
 .img-responsive {
   width: 100%;
   height: auto;
-
 }
 
 
 .circular {
   display: inline-block;
   position: absolute;
-  width: 200px;
-  height: 200px;
+  width: 150px;
+  height: 150px;
   overflow: hidden;
   border-radius: 50%;
   bottom: 0;
+  right: 50%;
+
 }
 
 .circular img {
   width: auto;
   height: 100%;
-  margin-left: -133px;
+  margin-left: -97px;
 }
 
 
-
-.bioMessage {
-  margin-left: 10%;
-  margin-right: 10%;
-}
 .footerIcons {
-  display: block;
-  padding: 20px 80px;
   width: 40%;
   color: green;
   font-size: 50px;
@@ -102,14 +98,17 @@ ul {
 .navGlobe{
   width: 60%;
   color: rgb(15, 228, 241);
-  text-align: right;
+  text-align: center;
   font-size: 200px;
   
 }
 
 
 
-
-  
-  
-  
+@media screen and (min-width:850px){
+  .container{
+    width: 800px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
